--- a/SupplyChains/main/templates/manage.html
+++ b/SupplyChains/main/templates/manage.html
@@ -1,12 +1,100 @@
-{% extends "base.html" %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="x-ua-compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>AdminManagePage</title>
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
 
-{% block head %}
-<title>Manage Panel</title>
-{% endblock %}
-{% block body %}
-    <h1>Please upload a data file:</h1>
-    <form enctype="multipart/form-data" method="POST" action="">{% csrf_token %}
-        <input type="file" name="file" />
-        <input type="submit" value="Upload" />
-    </form>
-{% endblock %}
+    <link href="/static/css/fileinput.min.css" media="all" rel="stylesheet" type="text/css">
+    <link href="/static/css/AdminMangePage.css" rel="stylesheet">
+    <link href="/static/font-awesome/css/font-awesome.css" rel="stylesheet" type="text/css">
+
+    <script src="/static/js/jquery-1.11.3.min.js"></script>
+    <script src="/static/js/fileinput.min.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
+    <script src="/static/js/fileinput_locale_LANG.js"></script>
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+    <script src="/static/js/html5shiv.js"></script>
+    <script src="/static/js/respond.js"></script>
+    <![endif]-->
+
+</head>
+<body>
+<nav class="navbar navbar-default navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">ChainDemo-AdminPage</a>
+        </div>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="/accounts/logout/">Log Out</a></li>
+                <li><a href="/">Choose Chain</a></li>
+                <li><a data-toggle="modal" data-target="#about">ABOUT</a></li>
+            </ul>
+        </div>
+
+        <div class="collapse navbar-collapse navbar-ex1-collapse">
+            <ul class="nav navbar-nav side-nav">
+                <li class="active"><a href="/manage/"><i class="fa fa-fw fa-dashboard"></i>Overview</a></li>
+                <li><a href="/log.csv"><i class="fa fa-fw fa-bar-chart-o"></i>Download Log File</a></li>
+            </ul>
+        </div>
+
+    </div>
+</nav>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-lg-12">
+            <h1>
+                System Parameters Setting&nbsp;&nbsp;&nbsp;
+                <small>Overview</small>
+            </h1>
+            <ol class="breadcrumb">
+                <li class="active">
+                    <i class="fa fa-dashboard"></i> Parameters Settings
+                </li>
+            </ol>
+        </div>
+    </div>
+
+    <div class="col-sm-12">
+        <h3>Please upload a data file:</h3>
+
+        <form class="col-sm-8" enctype="multipart/form-data" method="post" action="">{% csrf_token %}
+            <label class="control-label">Excel File:</label>
+            <input name="file" id="file" type="file" class="file" data-show-preview="false">
+        </form>
+    </div>
+
+</div>
+<div class="modal fade" id="about" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                        aria-hidden="true">&times;</span></button>
+                <h3 class="modal-title" id="myModalLabel">About</h3>
+            </div>
+            <div class="modal-body">
+                <p>Created By MARS</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!--=====================-->
+
+</body>
+</html>
