--- a/SupplyChains/main/templates/registration/login.html
+++ b/SupplyChains/main/templates/registration/login.html
@@ -1,18 +1,43 @@
-{% extends "base.html" %}
-{% block head %}
-<title>Login</title>
-{% endblock %}
-{% block body %}
-<h1>User Login</h1>
-{% if form.errors %}
-<p class="error">Sorry, username and password do not match.</p>
-{% endif %}
-<form action="" method="post">{% csrf_token %}
-    <label for="username">Username:</label>
-    <input type="text" name="username" value="" id="username" />
-    <label for="password">Password:</label>
-    <input type="password" name="password" value="" id="password" />
-    <input type="submit" value="Login" />
-    <input type="hidden" name="next" value="{{ next|escape }}" />
-</form>
-{% endblock %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="x-ua-compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="description" content="THIS IS LOGIN PAGE">
+    <meta name="author" content="Naldo">
+    <title>Student Login</title>
+
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/css/login.css" rel="stylesheet">
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+    <script src="/static/js/html5shiv.js"></script>
+    <script src="/static/js/respond.js"></script>
+    <![endif]-->
+    <script src="/static/js/login.js"></script>
+</head>
+<body>
+<div class="container">
+    {% if form.errors %}
+        <p class="error">Sorry, username and password do not match.</p>
+    {% endif %}
+    <form class="form-signin" name="form-login" method="post" action="">{% csrf_token %}
+        <h2 class="form-signin-heading">Please Sign In</h2>
+        <label for="username" class="sr-only">User Name</label>
+        <input type="text" id="username" class="form-control" name="username" placeholder="User Name" required
+               autofocus>
+        <label class="sr-only">Password</label>
+        <input type="password" id="password" class="form-control" name="password" placeholder="Password" required>
+
+        <div class="checkbox">
+            {#            <label><input type="checkbox" value="remember-me">Remember Me</label>#}
+            <label><a href="/accounts/register/" target="_blank">Register Account</a></label>
+        </div>
+        <input type="hidden" name="next" value="{{ next|escape }}"/>
+        <input class="btn btn-lg btn-primary btn-block" type="submit" value="Sign In">
+    </form>
+</div>
+
+</body>
+</html>
