--- a/SupplyChains/main/templates/simulate.html
+++ b/SupplyChains/main/templates/simulate.html
@@ -8,6 +8,7 @@
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/css/simulation1.css" rel="stylesheet" type="text/css">
 
+    <script src="/static/js/jscharts.js" type="text/javascript"></script>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
     <script src="/static/js/html5shiv.js"></script>
@@ -20,18 +21,18 @@
             el.innerHTML=time.toLocaleDateString()+" "+time.toLocaleTimeString();
             setTimeout(displayTime,1000);
 
-            var dis_tpDCUS=document.getElementById("dis_transDC2US");
-            var dis_tpDCEU=document.getElementById("dis_transDC2EU");
-            var dis_tpUSEU=document.getElementById("dis_transUS2EU");
-            var dis_tpEUUS=document.getElementById("dis_transEU2US");
-            var input_transDC2US=document.getElementById("DCUS");
-            var input_transDC2EU=document.getElementById("DCEU");
-            var input_transUS2EU=document.getElementById("USEU");
-            var input_transEU2US=document.getElementById("EUUS");
-            dis_tpDCUS.innerHTML=eval(input_transDC2US).value;
-            dis_tpDCEU.innerHTML=eval(input_transDC2EU).value;
-            dis_tpUSEU.innerHTML=eval(input_transUS2EU).value;
-            dis_tpEUUS.innerHTML=eval(input_transEU2US).value;
+//            var dis_tpDCUS=document.getElementById("dis_transDC2US");
+//            var dis_tpDCEU=document.getElementById("dis_transDC2EU");
+//            var dis_tpUSEU=document.getElementById("dis_transUS2EU");
+//            var dis_tpEUUS=document.getElementById("dis_transEU2US");
+//            var input_transDC2US=document.getElementById("DCUS");
+//            var input_transDC2EU=document.getElementById("DCEU");
+//            var input_transUS2EU=document.getElementById("USEU");
+//            var input_transEU2US=document.getElementById("EUUS");
+//            dis_tpDCUS.innerHTML=eval(input_transDC2US).value;
+//            dis_tpDCEU.innerHTML=eval(input_transDC2EU).value;
+//            dis_tpUSEU.innerHTML=eval(input_transUS2EU).value;
+//            dis_tpEUUS.innerHTML=eval(input_transEU2US).value;
         }
         window.onload=display;
     </script>
@@ -40,6 +41,19 @@
 </head>
 <body>
 <span id="time"></span>
+
+<div class="container">
+    <div class="row">
+        <div class="col-sm-6 col-sm-offset-6">
+            <div class="col-sm-2">
+                <a href="/accounts/logout/" class="btn btn-info" role="button">Log Out</a>
+            </div>
+            <div class="col-sm-2">
+                <a href="/" class="btn btn-info" role="button">Choose Chains</a>
+            </div>
+        </div>
+    </div>
+</div>
 <!--Simulation Page-->
 <div class="container">
     <div class="row">
@@ -94,23 +108,23 @@
 </div>
 <div class="row">
     <div class="col-sm-1 col-sm-offset-8">
-        <img class="img-responsive" src="../img/arrow_135.jpg">
+        <img class="img-responsive" src="/static/img/arrow_135.jpg">
     </div>
     <div class="col-sm-1">
-        <img class="img-responsive" src="../img/arrow_-135.jpg">
+        <img class="img-responsive" src="/static/img/arrow_-135.jpg">
     </div>
 </div>
 <div class="row">
     <div class="col-sm-2">
         <div class="text-center"><label class="dis_name">Plant</label></div>
-        <img class="img-responsive" src="../img/factory.png">
+        <img class="img-responsive" src="/static/img/factory.png">
     </div>
     <div class="col-sm-1">
-        <img class="img-responsive" style="margin-top: 120px" src="../img/arrow.jpg">
+        <img class="img-responsive" style="margin-top: 120px" src="/static/img/arrow.jpg">
     </div>
     <div class="col-sm-2">
         <div class="text-center"><label class="dis_name">DC</label></div>
-        <img class="img-responsive" style="margin-top: 30px" src="../img/Simulation-DC.jpg">
+        <img class="img-responsive" style="margin-top: 30px" src="/static/img/Simulation-DC.jpg">
     </div>
     <div class="col-sm-1" style="margin-top: 50px">
         <div class="panel panel-primary">
@@ -120,26 +134,9 @@
             </div>
         </div>
     </div>
-    <!--<div class="col-sm-1">-->
-        <!--<div class="panel panel-primary">-->
-            <!--<div class="panel-heading panelhead-cus text-center">US</div>-->
-            <!--<div class="panel-body">-->
-                <!--<form role="form">-->
-                    <!--<input class="form-control" id="input_transDC2US" required>-->
-                <!--</form>-->
-            <!--</div>-->
-        <!--</div>-->
-        <!--<div class="panel panel-primary">-->
-            <!--<div class="panel-heading panelhead-cus text-center">EU</div>-->
-            <!--<div class="panel-body">-->
-                <!--<form role="form">-->
-                    <!--<input class="form-control" id="input_transDC2EU" required>-->
-                <!--</form>-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</div>-->
+
     <div class="col-sm-1">
-        <img class="img-responsive ship_cus" src="../img/ship.jpg">
+        <img class="img-responsive ship_cus" src="/static/img/ship.jpg">
     </div>
     <div class="col-sm-2">
         <div class="panel panel-primary panel-cus">
@@ -150,7 +147,7 @@
         </div>
     </div>
     <div class="col-sm-1">
-        <img class="img-responsive ship_cus" src="../img/ship.jpg">
+        <img class="img-responsive ship_cus" src="/static/img/ship.jpg">
     </div>
     <div class="col-sm-2">
         <div class="panel panel-primary panel-cus">
@@ -165,16 +162,16 @@
 
 <div class="row">
     <div class="col-sm-1 col-sm-offset-8">
-        <img class="img-responsive" src="../img/arrow_45.jpg">
+        <img class="img-responsive" src="/static/img/arrow_45.jpg">
     </div>
     <div class="col-sm-1">
-        <img class="img-responsive" src="../img/arrow_-45.jpg">
+        <img class="img-responsive" src="/static/img/arrow_-45.jpg">
     </div>
 </div>
 
 <div class="row">
     <div class="col-sm-2 col-sm-offset-5">
-        <img src="../img/ship.jpg" class="img-responsive center-block">
+        <img src="/static/img/ship.jpg" class="img-responsive center-block">
         <div class="panel panel-primary trans-cus">
             <div class="panel-heading"><h3 class="panel-title">Transport</h3></div>
             <div class="panel-body">
@@ -183,11 +180,11 @@
         </div>
     </div>
     <div class="col-sm-1" style="margin-top: 30px">
-        <img src="../img/arrow.jpg" class="img-responsive">
+        <img src="/static/img/arrow.jpg" class="img-responsive">
     </div>'
     <div class="col-sm-2">
         <div class="text-center"><label>EU</label></div>
-        <img src="../img/demand.jpg" class="img-responsive center-block">
+        <img src="/static/img/demand.jpg" class="img-responsive center-block">
         <div class="panel panel-primary">
             <div class="panel-heading"><h3 class="panel-title">Tranship&nbsp;&nbsp;&nbsp;Inventory</h3></div>
             <div class="panel-body">
@@ -207,6 +204,7 @@
     </div>
 </div>
 
+{% if form_disp %}
 <!--Create Input Form-->
 <div class="row">
     <div class="col-sm-11 col-sm-offset-1">
@@ -250,9 +248,10 @@
         </form>
     </div>
 </div>
+{% endif %}
 
 <div class="row" style="margin-top: 50px">
-    <div class="col-sm-12">
+    <div class="col-sm-8">
         <div class="well">
             <div class="row">
                 <div class="col-sm-3">
@@ -267,14 +266,50 @@
             </div>
         </div>
     </div>
-</div>
-<script type="text/javascript">
 
+    <div id="profitChart" class="col-sm-4 charts">
+    </div>
+
+</div>
+
+{% for node in ProfitData %}
+    <label hidden id="Profit{{ node.id }}">{{ node.profit }}</label>
+{% endfor %}
+
+<script type="text/javascript">
+    var N ={{ now }};
+    if (N > 2) {
+        var dataProfit = new Array(N - 1);
+
+        for (var i = 1; i <= dataProfit.length; i++) {
+            dataProfit[i - 1] = document.getElementById('Profit' + i).innerHTML;
+        }
+
+        var myData = new Array(N - 1);
+        for (var i = 1; i <= myData.length; i++) {
+            myData[i - 1] = [i, parseFloat(dataProfit[i - 1])];
+        }
+
+        var myChart = new JSChart('profitChart', 'line');
+        myChart.setDataArray(myData);
+        myChart.setTitle('Chain 1 Profit');
+        myChart.setTitleColor('#8E8E8E');
+        myChart.setTitleFontSize(11);
+        myChart.setLineWidth(3);
+        myChart.setAxisNameX('Period');
+        myChart.setAxisNameY('');
+
+        myChart.setAxisColor('#BFD402');
+        myChart.setAxisValuesColor('#95A605');
+        myChart.setSize(616, 321);
+        myChart.draw();
+    }
 </script>
+
 <!--jQuery and Bootstrap-->
-<script src="static/js/jquery-1.11.3.min.js"></script>
-<script src="static/js/bootstrap.min.js"></script>
-<!--<script src="../js/simuchain1_run.js"></script>-->
+<script src="/static/js/jquery-1.11.3.min.js"></script>
+<script src="/static/js/bootstrap.min.js"></script>
+<!--<script src="/static/js/simuchain1_run.js"></script>-->
 
 </body>
 </html>
