--- a/SupplyChains/main/templates/registration/login.html
+++ b/SupplyChains/main/templates/registration/login.html
@@ -35,7 +35,7 @@
             <label><a href="/accounts/register/" target="_blank">Register Account</a></label>
         </div>
         <input type="hidden" name="next" value="{{ next|escape }}"/>
-        <input class="btn btn-lg btn-primary btn-block" type="submit" value="Sign In">
+        <input class="btn btn-lg btn-primary btn-block" type="submit" value="Log In">
     </form>
 </div>
 
